refactor:ewm-service2